# mmc-bpm

./: CMakeLists.txt  README.md  README_EN.md
include/: bpm.hpp
mmc-bpm/: CMakeLists.txt  aubio.h  mmc-bpm.cpp  mmc-bpm.h
